Added procedurally generated terrain (for clouds)
- Added procedurally generated Terrain for clouds, along with customs vertexShader and fragmentShader files for it

--- a/OpenGL-Setup.vcxproj.filters
+++ b/OpenGL-Setup.vcxproj.filters
@@ -64,5 +64,11 @@
     <None Include="shaders\vertexShader.vert">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\terrainFragmentShader.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shaders\terrainVertexShader.vert">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
