--- a/OpenGL-Setup.vcxproj
+++ b/OpenGL-Setup.vcxproj
@@ -145,6 +145,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\fragmentShader.frag" />
+    <None Include="shaders\terrainFragmentShader.frag" />
+    <None Include="shaders\terrainVertexShader.vert" />
     <None Include="shaders\vertexShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
