Added 2D Plane for Water + Mixed Textures + Signature
- Added a 2D Plane for the Water
- Added Mixed Textures for it (Water + Signature Texture)

--- a/OpenGL-Setup.vcxproj.filters
+++ b/OpenGL-Setup.vcxproj.filters
@@ -70,5 +70,11 @@
     <None Include="shaders\terrainVertexShader.vert">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shaders\waterFragmentShader.frag">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shaders\waterVertexShader.vert">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
