--- a/OpenGL-Setup.vcxproj
+++ b/OpenGL-Setup.vcxproj
@@ -148,6 +148,8 @@
     <None Include="shaders\terrainFragmentShader.frag" />
     <None Include="shaders\terrainVertexShader.vert" />
     <None Include="shaders\vertexShader.vert" />
+    <None Include="shaders\waterFragmentShader.frag" />
+    <None Include="shaders\waterVertexShader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
